# Mycelix-Marketplace

./: .gitignore  BUILD_IN_PROGRESS_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETE_SETUP_SUMMARY.md  COMPLETE_TRANSFORMATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS_BUILDING.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DISCOVERY_NOVEMBER_11_2025.md  FINAL_DEPLOYMENT_CHECKLIST.md  GITHUB_CONFIGURATION_COMPLETE.md  GITHUB_SETUP.md  HANDOFF_NOVEMBER_11_2025.md  IMPROVEMENTS.md  MANUAL_TESTING_CHECKLIST.md  NIX_ENVIRONMENT_SETUP_IN_PROGRESS.md  PHASE_3_COMPLETE.md  PHASE_4.7_AUDIT.md  PHASE_4.7_CODE_FIXES.md  PHASE_4.7_SUMMARY.txt  PHASE_4_BACKEND_INTEGRATION_PLAN.md  PHASE_4_COMPLETE_NOV_11_2025.md  PHASE_4_INTEGRATION_PROGRESS.md  PHASE_4_VERIFICATION_NOV_11_2025.md  PHASE_5_3_COMPLETE_SUMMARY.md  PHASE_5_3_EXECUTION_PLAN.md  PHASE_5_3_FINAL_PUSH_PLAN.md  PHASE_5_4_COMPLETE.md  PHASE_5_4_EXECUTION_PLAN.md  PHASE_5_5_COMPLETE.md  PHASE_5_5_EXECUTION_PLAN.md  PHASE_5_ACTION_PLAN.md  PHASE_5_CONTINUATION_PART2_PLAN.md  PHASE_5_CONTINUATION_PLAN.md  PHASE_5_PLAN.md  PHASE_5_PROGRESS.md  PHASE_5_ROADMAP.md  PROJECT_STATUS_NOVEMBER_11_2025.md  QUICK_START_PHASE_5.md  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: COMPLETE_PROJECT_STATUS.md  COMPLETE_PROJECT_STATUS_UPDATED.md  CURRENT_STATUS.md  Cargo.toml  FINAL_PROJECT_COMPLETION_REPORT.md  HDI_0.7.0_COMPILATION_FIX_GUIDE.md  HDI_0.7.0_FIXES_COMPLETE.md  HDK_0.6.0_COORDINATOR_MIGRATION_COMPLETE.md  HDK_0.6.0_COORDINATOR_MIGRATION_STATUS.md  HDK_0.6.0_MIGRATION_PATTERN.md  PHASE1_IMPROVEMENTS_COMPLETE.md  PHASE3_WASM_BUILD_IN_PROGRESS.md  PHASE3_WASM_BUILD_STATUS.md  PHASE4_INTEGRATION_TEST_PLAN.md  PHASE_2_ENHANCEMENTS.md  PHASE_4_FINAL_SUMMARY.md  RATE_LIMITING_GUIDE.md  README.md  SESSION_COMPLETE_HDI_FIXES_AND_WASM_SETUP.md  SESSION_PHASE2_SUMMARY.md  SESSION_PHASE3_COMPLETE.md  SESSION_PHASE4_COMPLETE.md  SESSION_SUMMARY_PHASE1_AND_PHASE3.md  SESSION_SUMMARY_PHASE1_IMPROVEMENTS.md  SHARED_UTILITIES_IMPLEMENTATION.md  STRATEGIC_IMPROVEMENTS_PLAN.md  TEST_SUMMARY.md  WASM_BUILD_SETUP_COMPLETE.md  apply-hdk-0.6-pattern.sh  build-happ.sh  build.sh  conductor-config.yaml  dna.yaml  fix-all-integrity-zomes.sh  fix-coordinator-zomes-hdk-0.6.sh  flake.nix  happ.yaml  shell.nix
backend/.cargo/: config.toml
backend/crates/mycelix_common/: Cargo.toml
backend/crates/mycelix_common/src/: lib.rs
backend/zomes/arbitration/coordinator/: Cargo.toml
backend/zomes/arbitration/coordinator/src/: lib.rs  tests.rs
backend/zomes/arbitration/integrity/: Cargo.toml
backend/zomes/arbitration/integrity/src/: lib.rs
backend/zomes/listings/: coordinator.wasm
backend/zomes/listings/coordinator/: Cargo.toml
backend/zomes/listings/coordinator/src/: lib.rs  tests.rs
backend/zomes/listings/integrity/: Cargo.toml
backend/zomes/listings/integrity/src/: lib.rs
backend/zomes/messaging/: INTEGRATION_STATUS.md  MESSAGING_GUIDE.md
backend/zomes/messaging/coordinator/: Cargo.toml
backend/zomes/messaging/coordinator/src/: lib.rs  tests.rs
backend/zomes/messaging/integrity/: Cargo.toml
backend/zomes/messaging/integrity/src/: lib.rs
backend/zomes/monitoring/: Cargo.toml
backend/zomes/monitoring/src/: lib.rs
backend/zomes/notifications/: Cargo.toml  FRONTEND_INTEGRATION_GUIDE.md  NOTIFICATION_ARCHITECTURE.md  NOTIFICATION_SYSTEM_GUIDE.md
backend/zomes/notifications/coordinator/: Cargo.toml
backend/zomes/notifications/coordinator/src/: lib.rs
backend/zomes/notifications/integrity/: Cargo.toml
backend/zomes/notifications/integrity/src/: lib.rs
backend/zomes/notifications/src/: lib.rs
backend/zomes/reputation/coordinator/: Cargo.toml
backend/zomes/reputation/coordinator/src/: cache.rs  lib.rs  tests.rs
backend/zomes/reputation/integrity/: Cargo.toml
backend/zomes/reputation/integrity/src/: lib.rs
backend/zomes/search/: Cargo.toml  SEARCH_ENGINE_ARCHITECTURE.md  SEARCH_ENGINE_GUIDE.md
backend/zomes/search/coordinator/: Cargo.toml
backend/zomes/search/coordinator/src/: lib.rs
backend/zomes/search/integrity/: Cargo.toml
backend/zomes/search/integrity/src/: lib.rs
backend/zomes/search/src/: lib.rs  query_parser.rs  ranker.rs  text_processor.rs  tf_idf.rs
backend/zomes/security/: Cargo.toml
backend/zomes/security/coordinator/: Cargo.toml
backend/zomes/security/coordinator/src/: lib.rs
backend/zomes/security/integrity/: Cargo.toml
backend/zomes/security/integrity/src/: lib.rs
backend/zomes/security/src/: lib.rs
backend/zomes/transactions/coordinator/: Cargo.toml
backend/zomes/transactions/coordinator/src/: lib.rs  tests.rs
backend/zomes/transactions/integrity/: Cargo.toml
backend/zomes/transactions/integrity/src/: lib.rs
docs/: DEVELOPER_GUIDE.md  PHASE_4.5_ENHANCEMENTS.md  index.html
frontend/: .env.example  .gitignore  ACCESSIBILITY_IMPROVEMENTS_NOV_12_2025.md  HOLOCHAIN_0.6_MIGRATION_NOTES.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/__tests__/: sanity.test.ts
frontend/src/lib/components/: Button.svelte  Card.svelte  ConfirmDialog.svelte  EmptyState.svelte  ErrorBoundary.svelte  ErrorState.svelte  FormInput.svelte  ListingCard.svelte  LoadingState.svelte  PhotoGallery.svelte  PhotoUploader.svelte  StatusBadge.svelte  TransactionCard.svelte  TrustBadge.svelte
frontend/src/lib/config/: constants.ts
frontend/src/lib/holochain/: client.ts  disputes.ts  index.ts  listings.ts  transactions.ts  users.ts
frontend/src/lib/ipfs/: ipfsClient.ts
frontend/src/lib/stores/: auth.ts  cart.ts  holochain.ts  index.ts  notifications.ts
frontend/src/lib/types/: api.ts  guards.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: cart.ts  dispute.ts  index.ts  listing.ts  transaction.ts  user.ts
(+21 files in other folders)
