[package]
name = "notifications_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notifications_coordinator"

[dependencies]
hdk.workspace = true
serde.workspace = true
holochain_serialized_bytes.workspace = true
notifications_integrity = { path = "../integrity" }
